:memo: update: 分野ごとにファイル分割

--- a/psets.tex
+++ b/psets.tex
@@ -249,194 +249,8 @@
 数学記号や用語の定義は, 教科書ごとに著しく差があれば問題文中で定義しますが, 多くの教科書で使われているものは一々定義することはありません.
 
 また, この問題集の解答が正しい保証はありません. 参考にする場合は気を付けてください.
-\newpage
-\pgsc{集合と位相}{darkolivegreen}
-まずは数学の道具（概念）に慣れるための基礎問題.\\
-\pbenum{
-\item $n$次元実空間における任意の2点 $\bm{x}, \bm{y} \in \mathbb{R}^n$に対し, シュワルツの不等式
-\begin{equation*}
-    |(\bm{x}\ |\ \bm{y})| \leq \|\bm{x}\|\cdot \|\bm{y}\|
-\end{equation*}
-を示せ.
-\item $n$次元実空間$\mathbb{R}^n$における2点$\bm{x} = (x_1, x_2, \cdots, x_n)$と$\bm{y} = (y_1, y_2, \cdots, y_n)$の距離$d(\bm{x}, \bm{y})$を次のように定義する.
-\begin{equation*}
-    d(\bm{x}, \bm{y}) = \sqrt{\sum_{i=1}^{n}(x_i - y_i)^2}
-\end{equation*}
-このとき, 三角不等式 $d(\bm{x}, \bm{z}) \leq d(\bm{x}, \bm{y}) + d(\bm{y}, \bm{z})$ を示せ.
-}{
-\item いくつかやり方があるが, ここでは天下りだが代数的に済む解法を示す.
-\begin{enumerate}
-    \item $\bm{y} = \bm{0}$ のとき\\
-    \ \\
-    両辺 0 で成立.
-    \item $\bm{y} \neq \bm{0}$ のとき\\
-    \ \\
-    任意の実数 $a, b$ に対して, 
-    \begin{eqnarray*}
-        0 &\leq& \|a\bm{x}+b\bm{y}\|^2\\
-        &=& \|a\|^2\|\bm{x}\|^2 + 2ab\cdot (\bm{x}\ |\ \bm{y}) + \|b\|^2\|\bm{y}\|^2
-    \end{eqnarray*}
-    ここで, $a = \|\bm{y}\|^2,\ b = -(\bm{x}\ |\ \bm{y})$ とすると,
-    \begin{eqnarray*}
-        0 &\leq& \|\bm{y}\|^4\|\bm{x}\|^2-2\|\bm{y}\|^2|(\bm{x}\ |\ \bm{y})|^2 + |\bm{y}\|^2|(\bm{x}\ |\ \bm{y})|^2\\
-        &=& \|\bm{y}\|^2(\|\bm{x}\|^2\|\bm{y}\|^2 - |(\bm{x}\ |\ \bm{y})|^2)
-    \end{eqnarray*}
-    今 $\|\bm{y}\|^2 \neq 0$ より, 両辺 $\|\bm{y}\|^2$ で割り, 平方根をとれば $|(\bm{x}\ |\ \bm{y})| \leq \|\bm{x}\|\cdot \|\bm{y}\|$ が成り立つ.
-\end{enumerate}
-以上より, シュワルツの不等式が示された.
-\item まず, 通常の三角不等式 $\|\bm{x} + \bm{y}\| \leq \|\bm{x}\| + \|\bm{y}\|$ を示す.
-これは(1)のシュワルツの不等式を利用することで次のように示される.
-\begin{eqnarray*}
-    \|\bm{x} + \bm{y}\|^2 &=& \|\bm{x}\|^2 + 2(\bm{x}\ |\ \bm{y}) + \|\bm{y}\|^2\\
-    &\leq& \|\bm{x}\|^2 + 2\|\bm{x}\||\bm{y}\| + |\bm{y}\|^2\\
-    &=& (\|\bm{x}\| + \|\bm{y}\|)^2
-\end{eqnarray*}
-この三角不等式より, $\|\bm{x} - \bm{y} + \bm{y} - \bm{z}\| \leq \|\bm{x} -\bm{y}\| + \|\bm{y} - \bm{z}\|$ が成り立ち, $d(\bm{x}, \bm{y}) = \|\bm{x} - \bm{y}\|$ より, 
-$d(\bm{x}, \bm{z}) \leq d(\bm{x}, \bm{y}) + d(\bm{y}, \bm{z})$ が成り立つ.
-}
-\newpage
-前問について補足する.
-
-まず, シュワルツの不等式を示す際に用いた証明は天下りすぎる. そこで, 二次関数と判別式を用いた証明が良く本で紹介されている.
-これは, $\|\bm{x}\|^2t^2 - 2(\bm{x}\ |\ \bm{y})t + \|\bm{y}\|^2 = \| t\bm{x} - \bm{y}\|^2 \geq 0$ の判別式が $D \leq 0$ であることから証明する.
-この手法からは, 等号成立条件が $\bm{x} = t\bm{y}$ となる実数 $t$ が存在することとすぐにわかる. 一方, 先の天下りな証明からは等号成立条件はわかりにくい.
-先の証明からは, 等号が成立することから $\| \|\bm{y}\|^2\|\bm{x}\| - |(\bm{x}\ |\ \bm{y})| \|\bm{y}\|^2 \|^2 = 0$ より $t = (\bm{x}\ |\ \bm{y})/(\bm{y}\ |\ \bm{y})$ と具体的な $t$ を示すことと, 
-逆に$\bm{x} = t\bm{y}$ を代入することから, 等号が成立することを示す. 
-
-また, 三角不等式の方では等号成立条件はシュワルツの不等式の等号成立条件と $(\bm{x}\ |\ \bm{y}) = |(\bm{x}\ |\ \bm{y})|$ をまとめた, 
-「$(\bm{x}\ |\ \bm{y}) \geq 0$ かつ $\bm{x} = t\bm{y}$ となる実数 $t$ が存在する」こととなる.
-
-
-\newpage
-\pbenum{
-\item 二つの集合$A, B$に対して, 次が成り立つことを示せ.
-\begin{equation*}
-    A \not\subset B \iff A \cap B^c \neq \emptyset
-\end{equation*}
-ただし, この問題以降 $A$ が $B$ の部分集合であることを $A \subset B$ と示すこととする.
-\item $\langle X, d\rangle$ を距離空間とし, $A$ を $X$ の部分集合とする. このとき, $A$ の内部 $A^\circ$, 閉包 $\overline{A}$, 境界 $\partial A$ を次のように定義する. ただし, $x$ の近傍の全体を $\bm{V}(x)$ とする
-(すなわち, $\bm{V}(x) \coloneqq \{ V \subset X\ |\ \exists \epsilon > 0, B(x\ ;\epsilon) \subset V\}$) また, $B(x\ ;\epsilon)$ は半径$\epsilon$ の開球($\epsilon$ -近傍)である.
-\begin{eqnarray*}
-    A^\circ &\coloneqq& \{ x \in X\ |\ \exists \epsilon > 0, B(x\ ;\epsilon) \subset A\}\\
-    \overline{A} &\coloneqq& \{ x \in X\ |\ \forall V \in \bm{V}(x), V \cap A \neq \emptyset\}\\
-    \partial A &\coloneqq& \{ x \in X\ |\ \forall V \in \bm{V}(x), V \cap A \neq \emptyset \land V - A \neq \emptyset \}
-\end{eqnarray*} 
-このとき, $(A^\circ)^c = \overline{A^c}$ となることを示せ.
-}{
-\item 以下の同値変形により示される.
-\begin{eqnarray*}
-    A \not\subset B &\iff& \exists x,\ \lnot (x \in A \implies x \in B )\\
-    &\iff& \exists x,\ \lnot (\lnot(x \in A) \lor x \in B )\\
-    &\iff& \exists x,\ x \in A \land x \in B^c\\
-    &\iff& A \cap B^c \neq \emptyset
-\end{eqnarray*}
-\item まず, 以下の同値変形
-\begin{eqnarray*}
-    x \in (A^\circ)^c &\iff& x \notin A^\circ\\
-    &\iff& \lnot(\exists \epsilon > 0)[B(x\ ;\epsilon) \subset A]\\
-    &\iff& (\forall \epsilon > 0)[B(x\ ;\epsilon) \not\subset A]\\
-    &\iff& (\forall \epsilon > 0)[B(x\ ;\epsilon) \cap A^c \neq \emptyset]\hspace{1zw}\text{($\because$ (1)より)}
-\end{eqnarray*}
-より $x \in (A^\circ)^c \iff (\forall \epsilon > 0)[B(x\ ;\epsilon) \cap A^c \neq \emptyset]$ が成り立つ.\\
-これより, $(\forall \epsilon > 0)[B(x\ ;\epsilon) \cap A^c \neq \emptyset] \iff x \in \overline{A^c}$ が成り立つことを示せばよい.
-\begin{enumerate}
-    \item $\implies$\\
-    近傍の定義より, 任意の $V \in \bm{V}(x)$に対し, $B(x\ ;\epsilon_0) \subset V$ となる $\epsilon_0 > 0$ が存在するが, 今, この $\epsilon_0$ に対して $B(x\ ;\epsilon_0) \cap A^c \neq \emptyset$
-    となるので, $V \cap A^c \neq \emptyset$ となる. これより, $x \in \overline{A^c}$ となる.
-    \item $\impliedby$\\ 
-    任意の $\epsilon > 0$ に対して, $B(x\ ;\epsilon) \subset B(x\ ;\epsilon)$ が成り立つので, 任意の $\epsilon > 0$ に対して, $B(x\ ;\epsilon) \in \bm{V}(x)$ となる.
-    よって, 閉包の定義より, $x \in \overline{A^c}$ となるとき, $(\forall \epsilon > 0)[B(x\ ;\epsilon) \cap A^c \neq \emptyset]$ が成り立つ.
-\end{enumerate}
-以上より, $(A^\circ)^c = \overline{A^c}$ が成り立つ.
-}
-
-\newpage
-\pbenumex{
-$\langle X, d\rangle$ を距離空間とし, $A$ を $X$ の部分集合とする. このとき, 次の問に答えよ. ただし, 内部, 境界, 閉包の定義は前問と同じものとする.
-}{
-\item $A^\circ \subset A \subset \overline{A}$ を示せ.
-\item $\partial A = \overline{A} - A^\circ$ を示せ.
-\item $A$ の外部 $A^e$ を $A^e \coloneqq (A^c)^\circ$ のように定義する. このとき, $A^\circ \cup \partial A \cup A^e = X$ であることを示せ.
-\item $A^\circ, \partial A, A^e$ がそれぞれ互いに素であることを示せ.
-}{
-\item まず, $x \in A^\circ$ のとき, $\exists \epsilon > 0, B(x\ ;\epsilon) \subset A$ であり, $x \in B(x\ ;\epsilon)$ とから $A^\circ \subset A$ となる.\\
-次に, $x \in A$ のとき, 任意の $x$ の近傍 $V$ に関して, 近傍の定義より $x \in V$ となる. よって $V \cap A \neq \emptyset$ より, $A \subset \overline{A}$ となる.\\
-以上より, $A^\circ \subset A \subset \overline{A}$ が成り立つ.
-\item まず, $\partial A \subset \overline{A} - A^\circ$ を示す.\\
-境界と閉包の定義より $\partial A \subset \overline{A}$ は明らか. よって $x \in \partial A \implies x \notin A^\circ$ を示せばよい.\\
-さて, 任意の $\epsilon > 0$ に対して $B(x\ ;\epsilon) \in \bm{V}(x)$ である(問1-2\ (2)参照)から, $x \in \partial A$ のとき, 境界の定義より $B(x\ ;\epsilon) - A \neq \emptyset$ が成り立つ.
-これより, $B(x\ ;\epsilon) \not\subset A$ となる. 今, 任意の $\epsilon > 0$ に対して, $B(x\ ;\epsilon) \not\subset A$ が示され, これは $x \notin A^\circ$ であることに他ならない.\\
-よって, $\partial A \subset \overline{A} - A^\circ$ が成り立つ.\\
-次に, $\overline{A} - A^\circ \subset \partial A$ を示す.\\
-これは, 先の議論を逆にたどることにより示せる(問1-2\ (2)を参照するとよい)\\
-以上より, $\partial A = \overline{A} - A^\circ$ が成り立つ.
-\item まず, $\overline{A} = A^\circ \cup \partial A$ となることを示す.\\
-これは次のように示される.
-\begin{align*}
-    A^\circ \cup \partial A &= A^\circ \cup (\overline{A} - A^\circ)&&\text{($\because$ (2)より)}\\
-                            &= \overline{A}&&\text{($\because$ (1)より$A^\circ \subset \overline{A}$)} 
-\end{align*}
-次に, 問1-2\ (2)より, $(A^\circ)^c = \overline{A^c}$ が成り立つから, $(A^e)^c = ((A^c)^\circ)^c = \overline{(A^c)^c} = \overline{A}$ が成り立つ. これより, $A^e \cup \overline{A} = X$ より, 
-$\overline{A} = A^\circ \cup \partial A$ とから, $A^\circ \cup \partial A \cup A^e = X$ が成り立つ.
-\item
-まず, $A^\circ \cup \partial A$ だが, これは(2)より明らかに $A^\circ \cup \partial A = \emptyset$ が成り立つ.\\
-次に $A^\circ \cap A^e = \emptyset$ を背理法により示す.\\
-$A^\circ \cap A^e$ の元の存在を仮定すると, (1)より $x \in A^\circ \cap A^e \implies x \in \overline{A} \cap A^e$ が成り立つが, (3)より $(A^e)^c = \overline{A}$ であるから, $\overline{A} \cap A^e = \emptyset$
-で矛盾. よって, $A^\circ \cap A^e = \emptyset$ が成り立つ.\\
-最後に $\partial A \cap A^e = \emptyset$ を背理法により示す.\\
-$\partial A \cap A^e$ の元の存在を仮定すると, (2)より $x \in \partial A \cap A^e \implies x \in \overline{A} \cap A^e$ が成り立ち, 先と同様にして矛盾. よって, $\partial A \cap A^e = \emptyset$ が成り立つ.\\
-以上より, $A^\circ, \partial A, A^e$ はそれぞれ互いに素である.
-}
-
-\newpage
-順序対の概念を理解しよう.\\
-
-\pbenum{
-\item $\langle a, b\rangle$ を $\langle a, b\rangle \coloneqq \{ \{a\}, \{a, b\} \}$ と定めるとき,
-\begin{align*}
-    \langle a, b\rangle = \langle c, d\rangle \iff (a = c) \land (b = d)
-\end{align*}
-となることを示せ. (補足: 外延的記法において, 同一の元を重複して書くことは禁じられていない. 同じものをいくつ書いてもその効果はただ1つだけ書いたのと同じものとしている)
-\item 順序対を拡張して $\bm{n}$\textbf{-対}を次のように定義する.
-\begin{align*}
-    \langle a_1 \rangle \coloneqq a_1,\hspace{3zw} \langle a_1, \cdots, a_{n-1}, a_n \rangle \coloneqq \langle \langle a_1, \cdots, a_{n-1} \rangle, a_n \rangle 
-\end{align*}
-このとき,
-\begin{align*}
-    \langle a_1, \cdots, a_n \rangle = \langle b_1, \cdots, b_n \rangle \iff a_1 = b_1 \land \cdots a_n = b_n
-\end{align*}
-が成り立つことを示せ.
-}{
-\item $\impliedby$ は明らか. $\implies$ は背理法で示す.\\
-まず, $a \neq c$ と仮定すると, $\{a\} \neq \{c\}$ より, $\{a\} = \{c, d\}$ とならなくてはならない. このとき, $a = c = d$ となり, $a \neq c$ に矛盾. よって $a = c$ でなくてはならない.\\
-次に $b \neq d$ を仮定する. $a = c$ より $\langle a, b\rangle = \langle c, d\rangle \implies \{ \{a\}, \{a, b\} \} = \{ \{a\}, \{a, d\} \}$ が成り立つ. ここで,
-\begin{enumerate}
-    \item $a = b$ のとき\\
-    $\{ \{a\}, \{a, b\} \} = \{\{a\}\}$ より, $\{a, d\} = \{a\}$ となるから, $d = a = b$ で $b \neq d$ に矛盾. 
-    \item $a \neq b$ のとき\\
-    $\{a, d\} = \{a\}$ または $\{a, d\} = \{a, b\}$ でなくてはならない. ここで $\{a, d\} = \{a, b\}$ とすると, $b = d$ で矛盾. また, $\{a, d\} = \{a\}$ とすると, $d = a$ となり, 今度は
-    $\{ \{a\}, \{a, d\} \} = \{\{a\}\}$ となり, $\{a, b\} = \{a\}$ より, $b = a = d$ より矛盾.
-\end{enumerate}
-以上より, $b = d$ より, $a = c \land b = d$ が成り立つ.\\
-ちなみに, 本問題で扱った $\langle a, b\rangle$ は, Kuratowski の順序対とよばれる.
-\item
-\begin{enumerate}
-    \item $\implies$\\
-    帰納法により示す.
-    $n = 1$ のときは明らか.\\
-    次に $\langle a_1, \cdots, a_k \rangle = \langle b_1, \cdots, b_k \rangle \implies a_1 = b_1 \land \cdots a_k = b_k$ が成り立つと仮定すると,
-    \begin{align*}
-        \langle a_1, \cdots, a_{k+1} \rangle = \langle b_1, \cdots, b_{k+1} \rangle &\implies \langle \langle a_1, \cdots, a_k \rangle, a_{k+1} \rangle = \langle \langle b_1, \cdots, b_k \rangle, b_{k+1} \rangle \\
-        &\implies \langle a_1, \cdots, a_k \rangle = \langle b_1, \cdots, b_k \rangle \land a_{k+1} = b_{k+1}\\
-        &\implies a_1 = b_1 \land \cdots a_k = b_k \land a_{k+1} = b_{k+1}
-    \end{align*}
-    が成り立つことから, $\langle a_1, \cdots, a_n \rangle = \langle b_1, \cdots, b_n \rangle \implies a_1 = b_1 \land \cdots a_n = b_n$ が成り立つ.\\
-    (集合の集合を認めれば, (1)において元が集合でも問題ない...はず)
-    \item $\impliedby$\\
-    上の議論を逆にたどればよい.
-\end{enumerate}
-以上より, $\langle a_1, \cdots, a_n \rangle = \langle b_1, \cdots, b_n \rangle \iff a_1 = b_1 \land \cdots a_n = b_n$ が成り立つ.
-}
+\include{psets_set_topology} % 集合と位相
+\include{psets_algebra} % 代数学
 
 \end{document}
 
