:memo: add: 問題 1-2 の補足を追加

--- a/psets.sty
+++ b/psets.sty
@@ -1,6 +1,7 @@
 \usepackage{fancyhdr}
 \usepackage{geometry}
 \usepackage{tikz}
+\usetikzlibrary{positioning, calc}
 
 \geometry{top=120pt,bottom=60pt,left=70pt,right=70pt,headheight=20pt,headsep=4pt}
 
@@ -9,6 +10,7 @@
 \definecolor{chocolate}{RGB}{210,105,30}
 \definecolor{midnightblue}{RGB}{25,25,112}
 \definecolor{maroon}{RGB}{128,0,0}
+\definecolor{forestgreen}{RGB}{34,139,34}
 
 \usepackage{tcolorbox}
 \tcbuselibrary{raster,skins,breakable}
